Refactor server setup and update MongoDB connection string; add .vercel to .gitignore

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/tugas-pweb
-PORT=3000
-
+MONGO_URI=mongodb+srv://ishikitouka_db_user:<kenmajas2912@cluster0.dxcbdka.mongodb.net/tugas-pweb?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=ishikitouka@gmail.com
 EMAIL_PASS=qpkt rxij qspn crju
