Update contact form AJAX submission with error handling; add contact model

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://ishikitouka_db_user:<kenmajas2912@cluster0.dxcbdka.mongodb.net/tugas-pweb?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ishikitouka_db_user:kenmajas2912@cluster0.dxcbdka.mongodb.net/tugas-pweb?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=ishikitouka@gmail.com
 EMAIL_PASS=qpkt rxij qspn crju
