--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+  "multer": "^1.4.5-lts.1",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+  "express": "^5.1.0",
+  "express-session": "^1.17.3",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
-    "nodemailer": "^7.0.6"
+  "nodemailer": "^7.0.6",
+  "bcrypt": "^5.1.0",
+  "connect-mongo": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
